Contd implementing db and table list views

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -8,3 +8,13 @@
     color: #6c7680 !important;
     font-weight: 500 !important;
 }
+
+#sidebar_menu {
+    max-height: 910px;
+    overflow-x: hidden;
+    /* overflow-y: scroll; */
+}
+
+.grid-view {
+    overflow-x: auto;
+}
